--- a/test-piedras/html/index.html
+++ b/test-piedras/html/index.html
@@ -4,11 +4,11 @@
         <meta charset="utf-8">
         <title>Test de diamantes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../css/index.css">
+        <link rel="stylesheet" href="/css/index.css">
     </head>
     <body>
         <div>
-           <img src="../img/title.png">
+           <img src="/img/title.png">
             <a href="cuestions.html">
                 <div id="botonComenzar">
                     <h2>COMENZAR</h2>
