--- a/test-piedras/html/resultado.html
+++ b/test-piedras/html/resultado.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>piedra</title>
-        <link rel="stylesheet" href="../css/resultado.css">
+        <link rel="stylesheet" href="/css/resultado.css">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
     </head>
     <body>
@@ -16,6 +16,6 @@
                 <p id="descripcion"></p>
             </div>
         </div>
-        <script src="../js/resultado.js"></script>
+        <script src="/js/resultado.js"></script>
     </body>
 </html>
