--- a/test-piedras/html/cuestions.html
+++ b/test-piedras/html/cuestions.html
@@ -5,14 +5,14 @@
     <meta charset="utf-8">
     <title>cuestiones</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/cuestions.css">
+    <link rel="stylesheet" href="../css/cuestions.css">
 </head>
 
 <body>
     <div class="contenedor">
         <div id="cpreguntas">
             <p>0</p>
-            <img src="/img/bar/00.png">
+            <img src="../img/bar/00.png">
             <p>33</p>
         </div>
         <div id="cuestiones">
@@ -25,7 +25,7 @@
             </div>
         </div>
     </div>
-    <script src="/js/cuestions.js"></script>
+    <script src="../js/cuestions.js"></script>
 </body>
 
 </html>
